# mcp-rfc-editor

./: .gitignore  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
src/mcp_rfc_editor/: __init__.py  server.py
tests/: conftest.py  test_server.py
